# C-Novel-Project

./: CMakeLists.txt  README.md  main.c
data/: novel_data.txt  test.txt  testData.txt
src/: crypt.c  enums.c  input.c  list.c  list_function.c  list_sort.c  list_swap.c  novel_list.c  output.c  reader.c  string.c  workflow.c  writer.c
src/headers/: crypt.h  enums.h  input.h  list.h  list_function.h  list_sort.h  list_swap.h  novel_list.h  output.h  project.h  reader.h  string.h  workflow.h  writer.h
